-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 18.0.0 (18.0 branch)
-
None
-
d553d0cfc (master), a41a88e40 (18.0)
Using an additional Kit for the currently loaded Project requires one click on the Kit item for enabling it and a second click for its activation.
The item visualization does not immediately reflect the enabling, since the Kit icon remains gray and its "+" overlay does not disappear.